--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "riscv-linux"]
 	path = boards/default/linux
 	url = https://github.com/firesim/linux.git
+[submodule "neomem-linux"]
+	path = boards/neomem/linux
+	url = git@github.com:PKUZHOU/linux.git
 [submodule "opensbi"]
 	path = boards/default/firmware/opensbi
 	url = https://github.com/riscv/opensbi.git
